tests/baselines/reference/S7.8.5_A2.5_T1.errors.txt
S7.8.5_A2.5_T1.ts(27,1): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
S7.8.5_A2.5_T1.ts(27,2): error TS1161: Unterminated regular expression literal.
S7.8.5_A2.5_T1.ts(27,3): error TS1511: Undetermined character escape.
S7.8.5_A2.5_T1.ts(28,2): error TS1109: Expression expected.


==== S7.8.5_A2.5_T1.ts (4 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-RegularExpressionBackslashSequence
    info: |
      RegularExpressionBackslashSequence ::
        \ RegularExpressionNonTerminator
    
      RegularExpressionNonTerminator ::
        SourceCharacter but not LineTerminator
    
      LineTerminator ::
        <LF>
        <CR>
        <LS>
        <PS>
    
    description: >
      A regular expression may not contain a <LF> as a SourceCharacter
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /a\
    ~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
     
!!! error TS1161: Unterminated regular expression literal.
      ~
!!! error TS1511: Undetermined character escape.
    /
     
!!! error TS1109: Expression expected.
    